deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myplants-app
spec:
  selector:
    matchLabels:
      app: myplants-app
  template:
    metadata:
      labels:
        app: myplants-app
    spec:
      containers:
      - name: myplants-app
        image: 69966/earthdx:78
        #image: nginx
        ports:
        - containerPort: 80
