service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myplants-svc
spec:
  selector:
    app: myplants-app
  ports:
  - port: 80
    targetPort: 80
